# NanoCodeAgent

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README_zh.md
.agent/skills/: git_commit_rules.md
.github/: copilot-instructions.md
.github/instructions/: git_commit_rules.instructions.md
include/: agent_tools.hpp  apply_patch.hpp  bash_tool.hpp  config.hpp  http.hpp  llm.hpp  repo_tools.hpp  sse_parser.hpp  tool_call.hpp  tool_call_assembler.hpp  tool_registry.hpp  write_file.hpp
src/: agent_tools.cpp  apply_patch.cpp  bash_tool.cpp  cli.cpp  config.cpp  http.cpp  llm.cpp  main.cpp  repo_tools.cpp  sse_parser.cpp  tool_call_assembler.cpp  tool_registry.cpp  write_file.cpp
tests/: CMakeLists.txt  test_agent_loop_limits.cpp  test_agent_mock_e2e.cpp  test_apply_patch.cpp  test_bash_tool.cpp  test_cli.cpp  test_config_precedence.cpp  test_http_limits.cpp  test_llm_parse.cpp  test_llm_stream.cpp  test_repo_tools.cpp  test_schema_and_args_tolerance.cpp  test_sse_parser.cpp  test_stream_limits.cpp  test_tool_registry.cpp  test_toolcall_assembler.cpp  test_write_file.cpp
tests/fixtures/: resp_ok.json
